# gentickets

./: API.docx  API.odt  CMakeLists.txt  README.md  Тэги.odt  документация по приложению.docx  документация по приложению.odt  инструкция по библиотеке.docx  инструкция по библиотеке.odt
